Fixed a small highlighting problem with view. Fixed show link to be more visible in build navigation

--- a/css/style.css
+++ b/css/style.css
@@ -271,9 +271,11 @@ h3 {
 }
 #show-hide{
 	font-size: .7em;
+	color: #59C7FF;
 }
 #show-hide:hover{
 	cursor: pointer;
+	text-decoration: none;
 }
 
 .corIncor{
